--- a/student.ipynb
+++ b/student.ipynb
@@ -918,6 +918,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Stuff"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# how to make dropdowns in markdown\n",
     "\n",
     "<details open>\n",
