--- a/README.ipynb
+++ b/README.ipynb
@@ -9,7 +9,13 @@
     "* [List Example](#List)\n",
     "* [Subheading Example](#Subheading)\n",
     "* [Python Logo](https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1024px-Python-logo-notext.svg.png)\n",
-    "* [Link to student stuff](./student.ipynb#Stuff)"
+    "* [Link to student stuff](./student.ipynb#Stuff)\n",
+    "\n",
+    "Blog Url (optional)\n",
+    "\n",
+    "Video Url\n",
+    "\n",
+    "[Slideshow url](presentation.pdf)"
    ]
   },
   {
